# CPIP-

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  QUICKSTART.md  README.md  SECURITY.md  b4dm4n-cw-commands.txt  b4dm4n_cw.py  blackpaper.md  cluster.sh  cpip  cpip-completion.bash  cpip-util  cpip.1  cpip_tui.py  deploy-pi.sh  deploy.sh  deploy_cpip.sh  deploy_htcpcp.sh  docker-compose.yml  htcpcp  htcpcp.1  inf1del_kyber.py  kyber.py  pyproject.toml  server.py  test_cpip.py  test_crypto.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml
k8s/: deployment.yaml  kustomization.yaml
pi-apps/: credits  description  install  uninstall
radio/: Makefile  radio_if.c  radio_if.h  radio_protocol.py
web/: index.html
