[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cpip"
version = "5.0.5"
description = "Coffee Pot Internet Protocol — RFC 2324 + RFC 7168 + mesh network"
readme = "README.md"
license = {text = "Unlicense"}
requires-python = ">=3.10"
keywords = ["cpip", "coffee", "tea", "rfc2324", "mesh", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "License :: Public Domain",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Internet :: RFC",
    "Programming Language :: Python :: 3",
]

dependencies = ["cryptography >= 42.0.0", "pqcrypto >= 0.4.0", "numpy >= 1.24.0"]

[project.optional-dependencies]
tui = ["opentui >= 0.1.0"]

[project.scripts]
cpip-server = "server:main"

[project.urls]
Homepage = "https://github.com/WilliamMajanja/CPIP-"
RFC-2324 = "https://datatracker.ietf.org/doc/html/rfc2324"
RFC-7168 = "https://datatracker.ietf.org/doc/html/rfc7168"

[tool.setuptools]
py-modules = ["server"]
